# Theia

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: CI.yml
compose/local/django/: Dockerfile  entrypoint
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
sentinel/: alerts.py  apps.py  constants.py  forms.py  models.py  signals.py  sslcheck.py  tasks.py  test_tasks.py  test_utils.py  urls.py  utils.py  validators.py  views.py
sentinel/migrations/: 0001_initial.py  0002_auto_20210807_1825.py  0002_auto_20210824_1722.py  0003_auto_20210827_1345.py  0004_auto_20210808_1316.py  0006_auto_20210808_1623.py  0009_auto_20210812_1120.py  0010_auto_20210812_1912.py  0011_alter_profilechangelog_server.py  0012_alter_servertask_task.py  0013_auto_20210813_1007.py  0014_auto_20210813_1045.py  0019_alter_server_contact_groups.py  0021_rename_contact_groups_server_contact_group.py
sentinel/templates/sentinel/: _layout.html  alert_logs.html  alerts_overview.html  server_overview.html
static/sentinel/assets/css/: ready.min.css
static/sentinel/assets/js/: ready.min.js
static/sentinel/assets/sass/ready/: _layouts.scss  _line-awesome.scss  _responsive.scss  (+1 more)
theia/: celery.py  manage.py  urls.py
theia/sentinel/: admin.py  alerts.py  apps.py  constants.py  forms.py  models.py  signals.py  sslcheck.py  tasks.py  test_tasks.py  urls.py  utils.py  views.py
theia/sentinel/migrations/: 0001_initial.py  0002_auto_20210807_1825.py  0003_auto_20210807_2015.py  0005_alter_serverprofile_server.py  0007_auto_20210808_1723.py  0008_alter_serverprofile_latency.py  0015_auto_20210813_1514.py  0016_auto_20210813_1539.py  0017_auto_20210813_1542.py  0018_server_contact_groups.py  0020_alter_server_contact_groups.py
theia/sentinel/templates/sentinel/: _layout.html  alerts_overview.html  changelog_overview.html  index.html  layout.html  server_overview.html  server_view.html
theia/sentinel/templatetags/: customfilters.py
theia/settings/: CI.py  base.py  dev.py  prod.py
theia/theia/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+30 files in other folders)
